# tailstate

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  compose.yaml  go.mod
.github/workflows/: ci.yml  release.yml
cmd/tailstate/: main.go
internal/boot/: config.go
internal/mattermost/: mattermost.go  mattermost_test.go
internal/model/: model.go  model_test.go
internal/monitor/: engine.go
internal/secret/: secret.go  secret_test.go
internal/store/: schema.go  store.go  store_test.go
internal/tailscale/: client.go  client_test.go
internal/web/: server.go  server_test.go
internal/web/static/: style.css
internal/web/templates/: login.html  reset.html  settings.html  setup.html  status.html
src/: config.rs
