[package]
name = "tailstate"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "Monitor a Tailscale tailnet and deliver change notifications"
repository = "https://github.com/crypt0rr/tailstate"

[dependencies]
anyhow = "1.0"
axum = "0.8"
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5", features = ["derive"] }
globset = "0.4"
hex = "0.4"
hmac = "0.12"
http = "1.3"
rand = "0.9"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
rusqlite = { version = "0.37", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml_ng = "0.10"
sha2 = "0.10"
subtle = "2.6"
thiserror = "2.0"
tokio = { version = "1.47", features = ["macros", "rt-multi-thread", "signal", "time", "net"] }
tower-http = { version = "0.6", features = ["trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
url = "2.5"
uuid = { version = "1.17", features = ["v4", "serde"] }

[dev-dependencies]
tempfile = "3.20"
tower = { version = "0.5", features = ["util"] }

[profile.release]
strip = true
lto = "thin"
codegen-units = 1
panic = "abort"
